fix(datepicker): hide alerts in avo datepicker to avoid layout issues

--- a/src/components/DatePicker/DatePicker.scss
+++ b/src/components/DatePicker/DatePicker.scss
@@ -53,4 +53,8 @@
 			white-space: initial;
 		}
 	}
+
+	[role="alert"] {
+		display: none !important;
+	}
 }
